fix(DateRangePicker): various layout issues, footerElement prop (#5539)

--- a/packages/datetime/src/_timepicker.scss
+++ b/packages/datetime/src/_timepicker.scss
@@ -6,6 +6,7 @@
 @import "./common";
 
 $timepicker-input-row-height: $pt-grid-size * 3 !default;
+$timepicker-row-width: $pt-grid-size * 8 !default;
 // subtract two because of inset shadow
 $timepicker-input-row-inner-height: $timepicker-input-row-height - 2 !default;
 // helps focus states of inputs line up correctly
@@ -18,6 +19,7 @@ $timepicker-control-width: $pt-grid-size * 3.3 !default;
 
   .#{$ns}-timepicker-arrow-row {
     padding: $timepicker-row-padding;
+    width: $timepicker-row-width;
   }
 
   .#{$ns}-timepicker-arrow-button {
@@ -45,6 +47,7 @@ $timepicker-control-width: $pt-grid-size * 3.3 !default;
     line-height: $timepicker-input-row-inner-height;
     padding: $timepicker-row-padding;
     vertical-align: middle;
+    width: $timepicker-row-width;
   }
 
   .#{$ns}-timepicker-divider-text {
